# haskell-todo

./: README.md  package.yaml  todo.cabal  todo.json
app/: Main.hs
src/: Task.hs
