name:           todo
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/rodney/haskell-todo#readme>
homepage:       https://github.com/rodneyp290/haskell-todo#readme
bug-reports:    https://github.com/rodneyp290/haskell-todo/issues
author:         Rodney Pilgrim
maintainer:     rodneyp290
copyright:      2018 Rodney Pilgrim
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/rodneyp290/haskell-todo

library
  exposed-modules:
      Lib
  other-modules:
      Paths_todo
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5 
  default-language: Haskell2010

executable todo-exe
  main-is: Main.hs
  other-modules:
      Paths_todo
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , todo
  default-language: Haskell2010

test-suite todo-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_todo
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , todo
  default-language: Haskell2010
